--- a/readme
+++ b/readme
@@ -1,11 +1,15 @@
-BBEdit Clippings for Tumblr theme developers
+A BBEdit Clippings Library for Tumblr Theme Development
 
-Intended for Tumblr theme developers who are using BBEdit and would like to improve workflow and efficiency.
+Intended for Tumblr theme developers who are using BBEdit and would like to have theme operator support in their editor.
 
 Installation instructions:
 
-Put the project folder in ~/Library/Application Support/BBEdit/Clippings/
+1) Download the project from this repo
 
-Includes defined operators found here:
+2) Unzip
+
+3) Add the project folder to your BBEdit Clippings directory (On Mac OS ~/Library/Application Support/BBEdit/Clippings/)
+
+Includes Tumblr theme operators found here:
 
 http://www.tumblr.com/docs/en/custom_themes
