--- a/readme
+++ b/readme
@@ -10,6 +10,8 @@ Installation instructions:
 
 3) Add the project folder to your BBEdit Clippings directory (On Mac OS ~/Library/Application Support/BBEdit/Clippings/)
 
+4) Select the set from the Clippings menu
+
 Includes Tumblr theme operators found here:
 
 http://www.tumblr.com/docs/en/custom_themes
