--- a/readme
+++ b/readme
@@ -10,7 +10,7 @@ Installation instructions:
 
 3) Add the project folder to your BBEdit Clippings directory (On Mac OS ~/Library/Application Support/BBEdit/Clippings/)
 
-4) Select the set from the Clippings menu
+4) Select the set from the Clippings menu in BBEdit
 
 Includes Tumblr theme operators found here:
 
