--- a/readme
+++ b/readme
@@ -8,7 +8,7 @@ Installation instructions:
 
 2) Unzip
 
-3) Add the project folder to your BBEdit Clippings directory (On Mac OS ~/Library/Application Support/BBEdit/Clippings/)
+3) Add the project folder to your BBEdit Clippings directory ~/Library/Application Support/BBEdit/Clippings/
 
 4) Select the set from the Clippings menu in BBEdit
 
