--- a/readme
+++ b/readme
@@ -15,3 +15,7 @@ Installation instructions:
 Includes Tumblr theme operators found here:
 
 http://www.tumblr.com/docs/en/custom_themes
+
+Check out more on configuring Clippings:
+
+http://pine.barebones.com/manual/BBEdit_10_User_Manual.pdf
