--- a/readme
+++ b/readme
@@ -12,7 +12,7 @@ Installation instructions:
 
 4) Select the set from the Clippings menu in BBEdit
 
-Includes Tumblr theme operators found here:
+Includes currently documented Tumblr theme operators:
 
 http://www.tumblr.com/docs/en/custom_themes
 
